# capitol-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: corpus-refresh.yml  house-refresh.yml  house-review-refresh.yml  offshore-full-refresh.yml  offshore-match-refresh.yml  senate-reconcile.yml  senate-refresh.yml  usaspending-refresh.yml  validate.yml
docs/: OPERATIONS.md  RETROFIT_PLAN.md
src/capitol_pipeline/: __init__.py  __main__.py  cli.py  config.py
src/capitol_pipeline/bridges/: __init__.py  capitol_exposed.py  search_documents.py
src/capitol_pipeline/exporters/: __init__.py  neon.py
src/capitol_pipeline/models/: __init__.py  congress.py  document.py  fara.py  legislation.py  offshore.py  search.py  usaspending.py
src/capitol_pipeline/normalizers/: __init__.py  crypto_assets.py
src/capitol_pipeline/parsers/: __init__.py  house_ptr.py
src/capitol_pipeline/processors/: __init__.py  chunking.py  embeddings.py  ocr.py
src/capitol_pipeline/registries/: __init__.py  members.py
src/capitol_pipeline/sources/: __init__.py  congress_gov.py  fara.py  house_clerk.py  icij_offshore_leaks.py  lda.py  senate_ethics.py  usaspending.py
tests/: test_congress_gov.py  test_crypto_assets.py  test_fara.py  test_house_clerk.py  test_house_ptr_parser.py  test_member_registry.py  test_offshore_leaks.py  test_search_indexing.py  test_senate_ingestion.py  test_usaspending.py
